Add api for getting users diversity - groupby query
