# lib/controllers/global/global.js
@@ -106,3 +106,20 @@ exports.searchUsers = function (request, reply){
         }
     });
 };
+
+exports.getUsersDiversity = function (request, reply){
+
+    const mongoDB = models.mongoConn.db(config.iscout.mongo.db);
+    const collection = mongoDB.collection(config.iscout.mongo.collections.users);
+
+    collection.aggregate([
+        {"$group" : {_id:"$type", count:{$sum:1}}}
+    ]).toArray((err, data) => {
+
+        if (err){
+            reply.boom.badImplementation(err);
+        } else {
+            reply.status(200).json(data);
+        }
+    });
+};
